--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = 0.0.1
 author = 0kq
 license = MIT License
 Home-page = https://github.com/0kq-github/PeroPero.py
+Summary = Unofficial PeroPero(MuseDash) API wrapper
 
 [options]
 install_requires =
